# mate-strategy

./: pyproject.toml
docs/examples/experimental design/: Regular Factor.ipynb
leg/: key.py  response.py  rules.py
src/mate_strategy/: _config.py
src/mate_strategy/core/: prompt.py  strategy.py
src/mate_strategy/io/: open_ai_io.py  open_ai_json.py
src/mate_strategy/json/: auto_rule.py  prompt.py  strategy.py
src/mate_strategy/prompt/: __init__.py
src/mate_strategy/prompt/factories/: __init__.py  exerptish.py
src/mate_strategy/rules/: __init__.py  predefined.py
src/mate_strategy/rules/factories/: __init__.py  excerptish.py
src/mate_strategy/rules/factories/utils/: registry.py
src/mate_strategy/schema/: __init__.py  wrapper.py
src/mate_strategy/schema/factories/: __init__.py  excerptish.py
src/mate_strategy/strategy/: __init__.py
